# jel

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  NOTES  README  README.md  TAGS  config.status  configure  configure.ac  cross-compile-ubuntu-mingw-w64-i686  jblock  jel-submit  jel.pc  jel.pc.in  jhist  jpegtran  jquant  pyjel.c  setup.py  unwedge  wcap  wedge
.travis/: clang_build.sh  gcc_build.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  control  copyright  files
include/jel/: jel.h  jel.h~  jpeg-9a
include/jel/jpeg-6b/: jconfig.h  jmorecfg.h
jpeg-6b/: Makefile  cdjpeg.h  configure  jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdphuff.c  jdpostct.c  jdsample.c  jdtrans.c  jerror.c  jfdctflt.c  jfdctfst.c  jfdctint.c  (+17 more)
jpeg-6b/.deps/: cdjpeg.Po  jcapimin.Po  jcapistd.Po  jccoefct.Po  jccolor.Po  jcdctmgr.Po  jchuff.Po  jcinit.Po  jcmainct.Po  jcmarker.Po  jcmaster.Po  jcomapi.Po  jcparam.Po  jcphuff.Po  jcprepct.Po  jcsample.Po  jctrans.Po  jdapimin.Po  jdapistd.Po  jdatadst.Po  jdatasrc.Po  jdcoefct.Po  jdcolor.Po  jddctmgr.Po  jdhuff.Po  jdinput.Po  jdmainct.Po  jdmarker.Po  jdmaster.Po  jdmerge.Po  jdphuff.Po  jdpostct.Po  jdsample.Po  jdtrans.Po  jerror.Po  jfdctflt.Po  jfdctfst.Po  jfdctint.Po  jidctflt.Po  jidctfst.Po  (+10 more)
jpeg-6b/old-o/: libjpeg.dylib
jpeg-9a/: libtool
jpeg-9a/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jaricom.Po  jcapimin.Plo  jcapimin.Po  jcapistd.Plo  jcapistd.Po  jcarith.Plo  jcarith.Po  jccoefct.Plo  jccoefct.Po  jccolor.Plo  jccolor.Po  jcdctmgr.Plo  jcdctmgr.Po  jchuff.Plo  jchuff.Po  jcinit.Plo  jcinit.Po  jcmainct.Plo  jcmainct.Po  jcmarker.Plo  jcmarker.Po  jcmaster.Plo  jcmaster.Po  jcomapi.Plo  jcomapi.Po  jcparam.Plo  jcparam.Po  jcprepct.Plo  jcprepct.Po  jcsample.Plo  jcsample.Po  jctrans.Plo  jctrans.Po  jdapimin.Plo  jdapimin.Po  jdapistd.Plo  (+71 more)
libjel/: README.API  ijel-ecc.c  ijel.c  jel.c  jel.h  jpeg-fd-dst.c  jpeg-fd-src.c  jpeg-mem-dst.c  jpeg-mem-src.c  jpeg-stdio-dst.c  jpeg-stdio-src.c  misc.c  misc.h
libjel/.deps/: ijel-ecc.Po  ijel.Po  jel.Po  jpeg-fd-dst.Po  jpeg-fd-src.Po  jpeg-mem-dst.Po  jpeg-mem-src.Po
rscode/: LICENSE  berlekamp.c  crcgen.c  ecc.h  example.c  galois.c  rs.c
rscode/.deps/: berlekamp.Po  crcgen.Po  galois.Po  rs.Po
stegtester/: Makefile  images.cc  images.h  main  main.cc  test.py
stegtester/stego/stego/: AppDelegate.h  AppDelegate.m  main.m  stego-Info.plist
stegtester/stego/stego.xcodeproj/: project.pbxproj
stegtester/stego/stego.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
stegtester/stego/stegoTests/: stegoTests-Info.plist  stegoTests.m
stegtester/transcode/: jpeg.py  makefile  tests.py  tests3.py
stegtester/xcode/stegotester/stegotester/: stegotester.1
stegtester/xcode/stegotester/stegotester.xcodeproj/: project.pbxproj
stegtester/xcode/stegotester/stegotester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
stegtester/xcode/stegotester/stegotester.xcodeproj/xcuserdata/connolly.xcuserdatad/xcschemes/: stegotester.xcscheme  xcschememanagement.plist
test/: hamming.py  test.py  tree640.pnm
test/ecc/: run.sh
utils/: energy.c  jblock.c  jhist.c  jquant.c  unwedge.c  wcap.c  wedge.c
utils/.deps/: jblock.Po  jhist.Po  jquant.Po  unwedge.Po  wcap.Po  wedge.Po
